[package]
name = "brain-brainfuck"
version = "1.1.1"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
description = "Brainfuck interpreter companion to the brain programming language"
repository = "https://github.com/brain-lang/brainfuck"
readme = "README.md"
keywords = ["brain", "brainfuck", "compiler", "interpreter", "optimizer"]
# crates.io/category_slugs
categories = ["command-line-interface"]
license = "MIT"

[dependencies]
clap = "^2.0"

[dev-dependencies]
lazy_static = "0.2"

[[bin]]
name = "brainfuck"
doc = false

[lib]
name = "brainfuck"
