[package]
name = "brain-brainfuck"
version = "1.3.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
description = "Brainfuck interpreter companion to the brain programming language"
repository = "https://github.com/brain-lang/brainfuck"
readme = "README.md"
keywords = ["brain", "brainfuck", "compiler", "interpreter", "optimizer"]
# crates.io/category_slugs
categories = ["command-line-interface"]
license = "MIT"

[badges]
# Travis CI: `repository` is required. `branch` is optional; default is `master`
travis-ci = { repository = "brain-lang/brainfuck" }

[dependencies]
clap = "*"
colored = "*"

[dev-dependencies]
lazy_static = "*"

[[bin]]
name = "brainfuck"
doc = false

[lib]
name = "brainfuck"
